# donald_credit_risk_analysis

./: .gitignore  README.md  pyproject.toml
src/credit_risk_prediction/: __init__.py  analysis.ipynb  modeling.ipynb
