[project]
name = "credit-risk-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "donaldmurataj", email = "donaldmurataj@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "notebook>=7.4.7",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
